# json-fortran

./: .PREPROCESSOR  .VERSION  .VERSION.in  .gitignore  .sconsign.dblite  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SConstruct  build.sh  codecov.yml  deploy.sh  ford.md  fpm.toml  index.html  json-fortran.code-workspace  json-fortran.fobis  json-fortran.md  json-fortran.pc.cmake.in  json_example_f90.html  json_module_f90.html  masterindex.html  modules.json  robo_classes.html  robo_functions.html  robo_modules.html  robo_sourcefiles.html  robo_unittests.html  robodoc.css  robodoc.rc  search.html  toc_index.html
.github/: CONTRIBUTING.md
.github/workflows/: CI.yml
.travis-old/: .travis.yml  deploy.sh
1.0.0/: masterindex.html  robo_functions.html  robo_modules.html  robo_sourcefiles.html
2.0.0/: json_example_f90.html  robo_functions.html  robo_unittests.html  toc_index.html
3.0.0/: json_module__test_f90.html  json_module_f90.html  robo_definitions.html  robo_methods.html  toc_index.html
3.1.0/: json_module_f90.html  robo_interfaces.html  robo_modules.html
3.1.0/tests/: jf_test_1_f90.html  jf_test_4_f90.html  jf_test_5_f90.html  jf_test_7_f90.html
4.0.0/: index.html  robo_classes.html  robo_interfaces.html  robo_macros.html  robo_modules.html
4.0.0/tests/: jf_test_10_f90.html  jf_test_1_f90.html  jf_test_2_f90.html  jf_test_4_f90.html
4.1.0/: json_module_F90.html  robo_functions.html  robo_interfaces.html  toc_index.html
4.1.0/tests/: jf_test_10_f90.html  jf_test_11_F90.html  jf_test_4_f90.html  jf_test_5_f90.html  jf_test_8_f90.html  jf_test_9_f90.html
4.1.1/: robo_definitions.html
4.2.0/: index.html  search.html
cmake/: FCompilerConsistencyCheck.cmake  checkOutOfSource.cmake  fixupInstallNameDir.cmake  jsonfortran-config.cmake.in  pickFortranCompilerFlags.cmake  uninstall.cmake.in
documentation/: index.html  robo_modules.html  robo_sourcefiles.html  robo_unittests.html
files/: invalid2.json  test1.json  test2.json  test4.json  test5.json
interface/: array_callback_func.html  json_add.html  json_array_callback_func.html  json_core.html  json_create_array.html  json_create_double.html  json_create_integer.html  json_create_logical.html  json_create_null.html  json_create_object.html  json_create_string.html  json_destroy.html  json_file.html  json_get.html  json_get_child.html  json_parse.html  json_print.html  json_print_to_string.html  json_remove.html  json_remove_if_present.html  json_traverse_callback_func.html  json_update.html  operator%28%3D%3D%29.html  operator%28slashslash%29.html  operator(==).html  operator(SLASH=).html  operator(SLASHSLASH).html  parser_func.html  string_to_real_func.html  throw_exception.html  to_unicode.html  traverse_callback_func.html
lib/: json_module.mod
lists/: absint.html  files.html  modules.html  procedures.html  types.html
master/: json_module_F90.html  json_module_f90.html  masterindex.html  robo_classes.html  robo_definitions.html  robo_functions.html  robo_interfaces.html  robo_macros.html  robo_modules.html  robo_sourcefiles.html  robo_unittests.html  toc_index.html
module/: json_file_module.html  json_kinds.html  json_module.html  json_parameters.html  json_string_utilities.html  json_value_module.html
packaging/: CMakeLists.txt
page/: README.html  index.html
pages/: README.md  index.md
prev/: index.html  search.html
proc/: annotate_invalid_json.html  assign_json_file.html  assign_json_file_to_string.html  assign_string_to_json_file.html  compact_real_string.html  convert.html  decode_rfc6901.html  default_comp_ucs4.html  default_join_ucs4.html  default_neq_ucs4.html  destroy_json_core.html  destroy_json_data.html  encode_rfc6901.html  escape_string.html  finalize_json_file.html  flag_not_found.html  get_current_line_from_file_sequential.html  get_current_line_from_file_stream.html  get_json_core_in_file.html  initialize_json_core.html  initialize_json_core_in_file.html  initialize_json_file.html  initialize_json_file_from_string.html  initialize_json_file_from_string_v2.html  initialize_json_file_v2.html  integer_to_string.html  json_add_integer_by_path.html  json_add_integer_vec_by_path.html  json_add_logical_by_path.html  json_add_logical_vec_by_path.html  json_add_member_by_path.html  json_add_null_by_path.html  json_add_null_vec_by_path.html  json_add_real32_by_path.html  json_add_real32_vec_by_path.html  json_add_real_by_path.html  json_add_real_vec_by_path.html  json_add_string_by_path.html  json_add_string_by_path_path_ascii.html  json_add_string_by_path_value_ascii.html  (+354 more)
scripts/: generate_json.py
sourcefile/: json_file_module.f90.html  json_kinds.f90.html  json_module.f90.html  json_parameters.f90.html  json_string_utilities.f90.html  json_value_module.f90.html
src/: json_add_scalar_by_path.inc  json_example.f90  json_file_module.F90  json_get_scalar_by_path.inc  json_get_vec_by_path.inc  json_get_vec_by_path_alloc.inc  json_initialize_arguments.inc  json_initialize_dummy_arguments.inc  json_kinds.F90  json_macros.inc  json_module.F90  json_module.f90  json_parameters.F90  json_string_utilities.F90  json_value_module.F90
test/: jf_test_01.F90  jf_test_02.F90  jf_test_03.F90  jf_test_05.F90  jf_test_07.F90  jf_test_09.F90  jf_test_11.F90  jf_test_14.F90  jf_test_15.F90  jf_test_16.F90  jf_test_18.F90  jf_test_20.F90  jf_test_21.F90  jf_test_22.F90  jf_test_23.F90  jf_test_25.F90  jf_test_26.F90  jf_test_28.F90  jf_test_29.F90  jf_test_32.F90  jf_test_33.F90  jf_test_35.F90  jf_test_37.F90  jf_test_38.F90  jf_test_40.F90  jf_test_41.F90  jf_test_42.F90  jf_test_47.F90  jf_test_48.F90  jf_test_50.F90  jf_test_51.F90  jf_test_52.F90
tests/: json_example.f90
tipuesearch/: tipuesearch_content.js
type/: json_core.html  json_file.html  json_value.html
visual_studio/: jsonfortran.sln  jsonfortran.vfproj
visual_studio_2010/: example.vfproj  jsonfortran.sln  jsonfortran.vfproj  test1.vfproj  test11.vfproj  test2.vfproj  test3.vfproj  test4.vfproj  test5.vfproj  test6.vfproj  test7.vfproj  test8.vfproj  test9.vfproj
(+15157 files in other folders)
